<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SaveShoesFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_brand" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/FixorFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:textOn="@string/texton"
        android:textOff="@string/textoff"
        android:textStyle="bold"
        android:showText="true"

        android:textSize="20sp"
        android:thumbTextPadding="8dp"

        android:text="@string/switch_fix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <CheckBox
        android:id="@+id/cbSmall"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/cb_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FixorFree" />

    <CheckBox
        android:id="@+id/cbMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/cb_medium"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toEndOf="@+id/cbSmall"
        app:layout_constraintTop_toBottomOf="@+id/FixorFree" />

    <CheckBox
        android:id="@+id/cbLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_large"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"


        app:layout_constraintStart_toEndOf="@+id/cbMedium"
        app:layout_constraintTop_toBottomOf="@+id/FixorFree" />

    <CheckBox
        android:id="@+id/cbExtraLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_extralarge"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"


        app:layout_constraintTop_toBottomOf="@+id/FixorFree"
        app:layout_constraintLeft_toRightOf="@id/cbLarge"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="331dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FixorFree">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietFreeSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_freesize" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>